Feat: 네비게이션 바 추가 및 결제 성공/실페 추가

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -25,3 +25,11 @@
     background-color: #3e8e41;
     /* 클릭할 때 더 진하게 */
 }
+
+.navbar {
+    background-color: rgb(249, 179, 47);
+}
+
+.nav-button {
+    color: #4639ff;
+}
