--- a/src/css/conditionAssign.css
+++ b/src/css/conditionAssign.css
@@ -75,6 +75,7 @@
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.2s ease;
+    margin-right: 10px;
 }
 
 .conditionAssign-form button:hover {
